# goit-algo2-hw-04

./: README.md  main.py  main1.py  main2.py  pyproject.toml  tests.py  trie.py
src/: edmonds_karp.py
