[project]
name = "goit-algo2-hw-04"
version = "0.1.0"
description = "Trie (Prefix Tree)"
authors = [
    {name = "bit-to-bit",email = "vasiliy.pykhteev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
